# quest_streamer

./: .gitignore  README.md  pyproject.toml  setup.py
android/quest_camera_hand_streamer/tools/: patch_app_manager.py  verify_combined_source.py
android/quest_camera_hand_streamer/unity_overlay/Assets/Editor/: QuestStreamerBuild.cs
android/quest_camera_hand_streamer/unity_overlay/Assets/Plugins/Android/: AndroidManifest.xml  QuestCameraStreamer.java
android/quest_camera_hand_streamer/unity_overlay/Assets/Scripts/: OculusReaderControllerStreamer.cs  QuestCameraStreamerBridge.cs
android/quest_camera_streamer/: settings.gradle.kts
android/quest_camera_streamer/app/: build.gradle.kts
android/quest_camera_streamer/app/src/main/: AndroidManifest.xml
android/quest_camera_streamer/app/src/main/cpp/: CMakeLists.txt  quest_telemetry.cpp
android/quest_camera_streamer/app/src/main/java/com/oculus/camerademo/: CameraDemoViewModel.kt  MainActivity.kt  StreamingServer.kt  TelemetryActivity.kt  YuvJpegEncoder.kt
android/quest_camera_streamer/app/src/main/res/values/: strings.xml
examples/: apriltag_localizer_print.py  apriltag_localizer_viser.py  camera_preview.py  hand_tracking_print.py  hand_tracking_viser.py  per_hand_stream.py  print_all_buttons.py  print_raw_data.py  quest_hand_tracking.rviz  quest_viz.rviz  ros2_camera_publisher.py  ros2_hand_tracking_broadcaster.py  ros2_tf_broadcaster.py  teleop_wrapper.py  track_delta_pose.py  visualize_viser.py  visualize_wrapper_viser.py
quest_streamer/: __init__.py  apriltag_fusion.py  camera.py  delta_tracker.py  frames.py  hand_tracking.py  reader.py  utils.py  wrapper.py
scripts/: bootstrap_hand_tracking.sh  bootstrap_oculus_reader.sh  build_combined_quest_apk.sh  simulate_combined_protocols.py  switch_mode.sh  verify_combined_runtime.py  verify_local_combined_apk.py  verify_simulated_protocols.py
